Fix task creator to have spacing between checkbox and repeat interval label

--- a/src/app/input-controls/task-timing-options-input/task-timing-options-input.component.css
+++ b/src/app/input-controls/task-timing-options-input/task-timing-options-input.component.css
@@ -6,3 +6,7 @@ p {
 .input-separator {
 	margin: 0 var(--margin-small);
 }
+
+.checkbox-input {
+	gap: var(--margin-small);
+}
